[gd_scene load_steps=15 format=2]

[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://items/global/locked_icon.png" type="Texture" id=2]
[ext_resource path="res://ui/menus/shop/shop_background.png" type="Texture" id=3]
[ext_resource path="res://items/global/info.png" type="Texture" id=4]
[ext_resource path="res://items/global/random_icon.png" type="Texture" id=5]
[ext_resource path="res://ui/menus/run/locked_panel.gd" type="Script" id=6]
[ext_resource path="res://resources/fonts/actual/base/font_small_text.tres" type="DynamicFont" id=7]
[ext_resource path="res://resources/fonts/actual/base/font_small_title.tres" type="DynamicFont" id=8]
[ext_resource path="res://resources/fonts/actual/base/font_big_title.tres" type="DynamicFont" id=9]
[ext_resource path="res://resources/fonts/actual/base/font_subtitle.tres" type="DynamicFont" id=10]
[ext_resource path="res://ui/menus/shop/weapons.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/menus/ingame/item_panel_ui.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/menus/run/character_info_panel.gd" type="Script" id=13]
[ext_resource path="res://ui/menus/run/character_selection.gd" type="Script" id=14]

[node name="TraitSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 14 )
random_icon = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 75
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 392.0
margin_top = 75.0
margin_right = 1527.0
margin_bottom = 1055.0
size_flags_horizontal = 4
custom_constants/separation = 35
alignment = 1

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1135.0
margin_bottom = 73.0
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_left = 225.0
margin_right = 909.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 9 )
text = "CHARACTER_SELECTION"

[node name="DescriptionContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 1135.0
margin_bottom = 608.0
rect_min_size = Vector2( 0, 500 )
custom_constants/separation = 15
alignment = 1

[node name="Panel" parent="MarginContainer/VBoxContainer/DescriptionContainer" instance=ExtResource( 12 )]
margin_left = 0.0
margin_right = 359.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 475 )

[node name="MarginContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/Panel" index="0"]
margin_bottom = 495.0

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/Panel/MarginContainer" index="0"]
margin_bottom = 476.0

[node name="ItemDescription" parent="MarginContainer/VBoxContainer/DescriptionContainer/Panel/MarginContainer/VBoxContainer" index="0"]
expand_indefinitely = false

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/Panel/MarginContainer/VBoxContainer/ItemDescription" index="1"]
margin_top = 116.0
margin_right = 321.0
margin_bottom = 116.0

[node name="ScrollContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/Panel/MarginContainer/VBoxContainer/ItemDescription" index="2"]
margin_top = 116.0
margin_bottom = 461.0
rect_min_size = Vector2( 0, 345 )

[node name="WeaponStats" parent="MarginContainer/VBoxContainer/DescriptionContainer/Panel/MarginContainer/VBoxContainer/ItemDescription/ScrollContainer/VBoxContainer" index="0"]
margin_right = 321.0

[node name="Effects" parent="MarginContainer/VBoxContainer/DescriptionContainer/Panel/MarginContainer/VBoxContainer/ItemDescription/ScrollContainer/VBoxContainer" index="1"]
margin_right = 321.0

[node name="LockedPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer"]
margin_left = 374.0
margin_right = 734.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 4
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/LockedPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 495.0
rect_min_size = Vector2( 350, 0 )
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/LockedPanel/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 325.0
margin_bottom = 465.0
custom_constants/separation = 25

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/DescriptionContainer/LockedPanel/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 96.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer/DescriptionContainer/LockedPanel/MarginContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 300.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 10 )
text = "CHALLENGE_DESCRIPTION"
autowrap = true

[node name="InfoPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer"]
margin_left = 749.0
margin_right = 1135.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 4
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 381.0
margin_bottom = 495.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 351.0
margin_bottom = 465.0
custom_constants/separation = 25

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel/MarginContainer/VBoxContainer"]
margin_right = 326.0
margin_bottom = 96.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Records" type="Label" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel/MarginContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 326.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 8 )
text = "RECORDS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel/MarginContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 326.0
margin_bottom = 301.0
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 326.0
margin_bottom = 52.0

[node name="MaxDifficutlyBeatenTitle" type="Label" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
self_modulate = Color( 0.917647, 0.886275, 0.690196, 1 )
margin_left = 13.0
margin_right = 313.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "MAX_DIFFICULTY_BEATEN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxDifficultyBeatenValue" type="Label" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 326.0
margin_bottom = 52.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 326.0
margin_bottom = 124.0

[node name="MaxEndlessWaveTitle" type="Label" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
self_modulate = Color( 0.917647, 0.886275, 0.690196, 1 )
margin_right = 326.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "MAX_ENDLESS_WAVE_BEATEN"
align = 1
valign = 1

[node name="MaxEndlessWaveValue" type="Label" parent="MarginContainer/VBoxContainer/DescriptionContainer/InfoPanel/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 326.0
margin_bottom = 52.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 557.0
margin_top = 643.0
margin_right = 577.0
margin_bottom = 980.0
size_flags_horizontal = 4
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 20.0
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 10
custom_constants/margin_bottom = 0

[node name="Inventory" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer" instance=ExtResource( 11 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 0.0
margin_right = 10.0
margin_bottom = 0.0
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 15

[editable path="MarginContainer/VBoxContainer/DescriptionContainer/Panel"]
[editable path="MarginContainer/VBoxContainer/DescriptionContainer/Panel/MarginContainer/VBoxContainer/ItemDescription"]
